--- a/server/public/stylesheets/termlyplans.css
+++ b/server/public/stylesheets/termlyplans.css
@@ -207,3 +207,8 @@ input#classLevelInputCurriculumArea {
 #termly-plans-submit-button {
     margin-bottom: 10rem;
 }
+
+#reselect-and-download-pdf-section{
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+}
