--- a/server/app/views/planning/classtimetables/addNewClass.scala.html
+++ b/server/app/views/planning/classtimetables/addNewClass.scala.html
@@ -2,7 +2,7 @@
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, schoolsForTeacher: List[models.timetoteach.School] )
 
 @timetoteachAppMain(handler, s"Add New Class",
- userPictureUri, userFirstName, userFamilyName, None) {
+ userPictureUri, userFirstName, userFamilyName, None, None) {
  <li></li>
 }{
  <div class="container">
