--- a/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtGroupLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtGroupLevel.scala.html
@@ -3,7 +3,7 @@
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails, groupDetails: duplicate.model.Group, curriculumArea: String, subjectTermlyPlan: CurriculumAreaTermlyPlan, esAndOsCodeToDetailMap: Map[String, duplicate.model.esandos.EandO])
 
 @timetoteachAppMain(handler, s"${classDetails.className.name} Termly Plans - $curriculumArea - ${groupDetails.groupName.name.capitalize}",
-    userPictureUri, userFirstName, userFamilyName, Some(classDetails.id.id)) {
+    userPictureUri, userFirstName, userFamilyName, Some(classDetails.id.id), None) {
     <div class="in-app-menu-small-devices">
         <li class="nav-item nav-login-button">
             <a class="btn btn-outline-primary btn-block" role="button" href="@routes.Application.timeToTeachApp()">
@@ -58,6 +58,14 @@
         </div>
 
         <div class="termly-plans-overview-container">
+            <div id="reselect-and-download-pdf-section" class="d-flex justify-content-around">
+                <div class="col-3">
+                    <a id="termly-plans-edit" role="button" class="btn btn-outline-danger"
+                    href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansGroupLevel_SelectEsOsBenchmarksForCurriculumArea(classDetails.id.id, curriculumArea, groupDetails.groupId.id)">
+                        Re-Select Es&Os/Benchmarks</a>
+                </div>
+            </div>
+
             <div class="row text-center">
                 <div class="col-sm-6"><h4>Es & Os</h4></div>
                 <div class="col-sm-6"><h4>Benchmarks</h4></div>
@@ -96,14 +104,6 @@
                 </div>
             }
 
-        </div>
-        <div class="d-flex justify-content-end">
-            <div class="col-7"></div>
-            <div class="col-3">
-                <a id="termly-plans-edit" role="button" class="btn btn-warning"
-                href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansGroupLevel_SelectEsOsBenchmarksForCurriculumArea(classDetails.id.id, curriculumArea, groupDetails.groupId.id)">
-                    Re-Select Es&Os/Benchmarks</a>
-            </div>
         </div>
 
 
