--- a/server/app/views/planning/classtimetables/classesHome.scala.html
+++ b/server/app/views/planning/classtimetables/classesHome.scala.html
@@ -80,7 +80,7 @@
                          <div class="row">
                           <div class="mx-auto">
                            <div class="col-sm-12 col-md-10 col-xl-8">
-                            <button class="rounded btn btn-outline-info teachers-classes-btn teachers-classes-goto-btn" data-class-id="@classDetail.id.id" role="button">Manage Class</button>
+                            <button class="rounded btn btn-outline-info teachers-classes-btn teachers-classes-goto-btn" data-class-id="@classDetail.id.id" role="button">Class Setup</button>
                            </div>
                           </div>
                          </div>
