--- a/server/app/views/planning/classtimetables/manageClass.scala.html
+++ b/server/app/views/planning/classtimetables/manageClass.scala.html
@@ -2,7 +2,7 @@
 @import models.timetoteach.ui.CLASS_SETUP
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails)
 
-@timetoteachAppMain(handler, s"Class Setup - " + classDetails.className.name,
+@timetoteachAppMain(handler, s"Class ${classDetails.className.name}",
     userPictureUri, userFirstName, userFamilyName, Some(classDetails.id.id), Some(CLASS_SETUP)) {
 
     <div class="in-app-menu-small-devices">
