--- a/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtGroupLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtGroupLevel.scala.html
@@ -1,7 +1,7 @@
 @import models.timetoteach.TimeToTeachUserId
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails, groupDetails: duplicate.model.Group, curriculumArea: String, maybeEsOsAndBenchmarks: Option[duplicate.model.esandos.EsAndOsPlusBenchmarksForCurriculumAreaAndLevel])
 
-@timetoteachAppMain(handler, s"${classDetails.className.name} Termly Plans - $curriculumArea - ${groupDetails.groupName.name.capitalize}",
+@timetoteachAppMain(handler, s"Class ${classDetails.className.name}",
     userPictureUri, userFirstName, userFamilyName, Some(classDetails.id.id), None) {
     <div class="in-app-menu-small-devices">
         <li class="nav-item nav-login-button">
