--- a/server/app/views/login.scala.html
+++ b/server/app/views/login.scala.html
@@ -9,12 +9,12 @@
         <meta name="google-signin-scope" content="profile email">
         <meta name="google-signin-client_id"
         content="473457256422-khclkcv9b7u7ecu6q7nntq9460ko3mo4.apps.googleusercontent.com">
+        <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
         <script type="text/javascript" src="https://apis.google.com/js/platform.js" async defer></script>
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/utils.js")"></script>
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/signin.js")"></script>
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/signout.js")"></script>
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/facebook-login.js")"></script>
-        <script type="text/javascript" src="@routes.Assets.versioned("javascripts/facebook-sdk.js")"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("icons/ttt_owl.png")">
