--- a/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtClassLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtClassLevel.scala.html
@@ -57,7 +57,7 @@
         <div>
             <div id="reselect-and-download-pdf-section" class="d-flex justify-content-around">
                 <div class="col-3">
-                    <a id="termly-plans-edit" role="button" class="btn btn-outline-danger"
+                    <a id="termly-plans-edit" role="button" class="btn btn-outline-info"
                     href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansClassLevel_SelectEsOsBenchmarksForCurriculumArea(classDetails.id.id, curriculumArea.value.toString)">
                         Re-Select Es&Os/Benchmarks</a>
                 </div>
