--- a/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtGroupLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansOverviewForCurriculumAtGroupLevel.scala.html
@@ -60,7 +60,7 @@
         <div class="termly-plans-overview-container">
             <div id="reselect-and-download-pdf-section" class="d-flex justify-content-around">
                 <div class="col-3">
-                    <a id="termly-plans-edit" role="button" class="btn btn-outline-danger"
+                    <a id="termly-plans-edit" role="button" class="btn btn-outline-info"
                     href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansGroupLevel_SelectEsOsBenchmarksForCurriculumArea(classDetails.id.id, curriculumArea, groupDetails.groupId.id)">
                         Re-Select Es&Os/Benchmarks</a>
                 </div>
