--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -3,6 +3,7 @@
 @import "input-range.css";
 @import "classes.css";
 @import "termlyplans.css";
+@import "termlyplanspdf.css";
 
 @font-face {
     font-family: 'simplifica';
