--- a/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
+++ b/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
@@ -45,13 +45,8 @@
                     </div>
                     <div class="col-3">
                         <a id="download-termly-plan-pdf" class="btn btn-sm btn-outline-info btn-block" role="button"
-                        href="@controllers.planning.termly.routes.DownloadPdfController.viewClassTermlyPlan(classDetails.id.id)">
-                            View Overall Plan</a>
-                    </div>
-                    <div class="col-3">
-                        <a id="download-termly-plan-pdf" class="btn btn-sm btn-outline-info btn-block" role="button"
                         href="@controllers.planning.termly.routes.DownloadPdfController.downloadClassPdf(classDetails.id.id)">
-                            Download Termly Plan PDF</a>
+                            Download Plan PDF</a>
                     </div>
                 </div>
 
