--- a/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtClassLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtClassLevel.scala.html
@@ -1,11 +1,11 @@
 @import models.timetoteach.TimeToTeachUserId
 @import models.timetoteach.planning.ScottishCurriculumPlanningAreaWrapper
 @import curriculum.scotland.EsOsAndBenchmarksBuilderImpl.NO_SUBSECTION_NAME
-
+@import models.timetoteach.ui.CLASS_TERMLY_PLANS_LOWER
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails, curriculumArea: ScottishCurriculumPlanningAreaWrapper, esOsAndBenchmarksList: List[duplicate.model.esandos.EsAndOsPlusBenchmarksForCurriculumAreaAndLevel])
 
     @timetoteachAppMain(handler, s"Class ${classDetails.className.name}",
-        userPictureUri, userFirstName, userFamilyName, Some(classDetails.id.id), None) {
+        userPictureUri, userFirstName, userFamilyName, Some(classDetails.id.id), Some(CLASS_TERMLY_PLANS_LOWER)) {
         <div class="in-app-menu-small-devices">
             <li class="nav-item nav-login-button">
                 <a class="btn btn-outline-primary btn-block" role="button" href="@routes.Application.timeToTeachApp()">
